package RegistroJuegos;

public class ExcepcionJuego extends Exception{
    public ExcepcionJuego(String mensaje){
        super(mensaje);
    }
}
